fix vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,8 @@ td {
   padding: 10px;
   text-align: center;
   justify-content: center;
-  align-content: center;
+  align-items: center;
+  vertical-align: middle;
   text-transform: uppercase;
   background-color: #7e0825;
   
